--- a/public/css/wpadcenter-public.css
+++ b/public/css/wpadcenter-public.css
@@ -2,26 +2,16 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
-.wpadcenter-alignright{
-	display:inline;
-	float:right;
-	margin-left: 1.5em;
-}
-.wpadcenter-alignleft{
-	display:inline;
-	float:left ;
-	margin-right: 1.5em;
-}
-.wpadcenter-aligncenter{
-	display: flex;
-	flex-direction:column;
-	align-items: center;
-}
+
 .wpadcenter-adgroup-row{
 	display:flex;
 	flex-direction:row;
 	flex-wrap:wrap;
+	align-items:center;	
 }
 .wpadcenter-ad-spacing{
-	margin:5px;
+	padding:5px;
+}
+.aligncenter .wpadcenter-adgroup-row div{
+	margin:0 auto;
 }
